<resources>
    <string name="app_name">Tricksy Hobbitses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hobbit_options">Hobbit Options</string>
    <string name="bilbo_pref_key">bilbo_pref_key</string>
    <string name="frodo_pref_key">frodo_pref_key</string>
    <string name="samwise_pref_key">samwise_pref_key</string>
    <string name="golem_pref_key">golem_pref_key</string>
</resources>